--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -683,12 +683,14 @@ h6 {
 }
 
 .site-nav-icon {
-    height: 15px;
+    width: 100%;
+    height: auto;
     margin: -5px 0 0;
 }
 
 .site-logo {
-    height: 25px;
+    width: 100%;
+    height: auto;
 }
 
 .site-mast {
@@ -849,6 +851,7 @@ h6 {
 .post-card-avatar .author-profile-image {
     display: block;
     width: 100%;
+    height: auto;
     background: var(--color-secondary);
     border-radius: 100%;
     object-fit: cover;
