--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -851,6 +851,7 @@ h6 {
 .post-card-avatar .author-profile-image {
     display: block;
     width: 100%;
+    height: auto;
     background: var(--color-secondary);
     border-radius: 100%;
     object-fit: cover;
