--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -787,10 +787,14 @@ h6 {
 .post-card {
     color: inherit;
     text-decoration: none;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 2px 16px;
 }
 
 .post-card:hover {
     text-decoration: none;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .post-card-tags {
