--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -804,7 +804,7 @@ h6 {
     margin: 0 0 5px 0;
     font-size: 1.4rem;
     line-height: 1.15em;
-    color: var(--color-secondary);
+    /* color: var(--color-secondary); */
 }
 
 
