--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -552,8 +552,8 @@ h6 {
 .post-feature-image img {
     margin: 0 0 3vw;
     width: 100%;
-    height: 250px;
-    object-fit: cover;
+    height: 350px;
+    object-fit: scale-down;
 }
 
 .content-body h1,
